--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
 INDEED_URL: "https://www.indeed.com"
+GOOGLE_URL: "https://www.google.com"
 user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3"
 isHeadless: false
 
